browser/themes/shared/urlbar-autocomplete.inc.css
/* ... */
#
urlbar
-
contextual
-
tip
{
align
-
items
:
center
;
display
:
flex
;
padding
-
top
:
24px
;
padding
-
bottom
:
24px
;
padding
-
inline
:
urlbarViewItemInlinePadding
;
}
.
urlbarView
:
not
(
.
megabar
)
#
urlbar
-
contextual
-
tip
{
padding
-
inline
-
start
:
var
(
-
-
item
-
padding
-
start
calc
(
5px
+
urlbarViewFaviconOffset
)
)
;
padding
-
inline
-
end
:
var
(
-
-
item
-
padding
-
end
5px
)
;
}
#
urlbar
-
contextual
-
tip
-
title
{
flex
-
grow
:
1
;
padding
-
inline
-
end
:
75px
;
}
#
urlbar
-
contextual
-
tip
-
button
{
height
:
2
.
3em
;
width
:
9
.
15em
;
border
:
none
;
border
-
radius
:
2px
;
color
:
white
;
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
)
;
}
#
urlbar
-
contextual
-
tip
-
button
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
-
hover
)
;
}
#
urlbar
-
contextual
-
tip
-
button
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
-
active
)
;
}
#
urlbar
-
contextual
-
tip
-
button
:
-
moz
-
focusring
{
box
-
shadow
:
0
0
0
1px
#
0a84ff
inset
0
0
0
1px
#
0a84ff
0
0
0
4px
rgba
(
10
132
255
0
.
3
)
;
}
#
urlbar
-
contextual
-
tip
-
link
{
text
-
align
:
end
;
}
.
urlbarView
-
results
{
padding
-
block
:
urlbarViewPadding
;
white
-
space
:
nowrap
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
results
{
padding
-
inline
:
urlbarViewPadding
;
}
.
urlbarView
-
row
{
fill
:
currentColor
;
fill
-
opacity
:
.
6
;
padding
-
block
:
3px
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
.
urlbarView
.
megabar
.
urlbarView
-
row
-
inner
{
border
-
radius
:
2px
;
padding
-
inline
-
start
:
urlbarViewItemInlinePadding
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
.
urlbarView
.
megabar
.
urlbarView
-
row
-
inner
{
padding
-
block
:
6px
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
{
padding
-
inline
-
start
:
calc
(
var
(
-
-
item
-
padding
-
start
calc
(
5px
+
urlbarViewFaviconOffset
)
)
-
urlbarViewFaviconOffset
)
;
padding
-
inline
-
end
:
var
(
-
-
item
-
padding
-
end
5px
)
;
}
:
root
[
uidensity
=
touch
]
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
{
padding
-
block
:
11px
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
[
type
=
tip
]
{
padding
-
block
:
24px
;
}
.
urlbarView
.
megabar
.
urlbarView
-
row
[
type
=
tip
]
{
padding
-
block
:
18px
;
/
*
Compensating
for
the
4px
focus
ring
on
tip
buttons
.
*
/
padding
-
inline
-
end
:
calc
(
urlbarViewItemInlinePadding
+
4px
)
;
}
.
urlbarView
-
row
-
inner
{
display
:
flex
;
flex
-
wrap
:
nowrap
;
align
-
items
:
end
;
justify
-
content
:
start
;
}
.
urlbarView
-
title
[
overflow
]
.
urlbarView
-
url
[
overflow
]
{
mask
-
image
:
linear
-
gradient
(
to
left
transparent
black
2em
)
;
}
.
urlbarView
-
title
[
overflow
]
:
not
(
[
isurl
]
)
:
-
moz
-
locale
-
dir
(
rtl
)
{
mask
-
image
:
linear
-
gradient
(
to
right
transparent
black
2em
)
;
}
.
urlbarView
-
title
[
isurl
]
:
-
moz
-
locale
-
dir
(
rtl
)
.
urlbarView
-
url
:
-
moz
-
locale
-
dir
(
rtl
)
{
direction
:
ltr
!
important
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
:
hover
.
urlbarView
.
megabar
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
:
hover
>
.
urlbarView
-
row
-
inner
{
background
:
var
(
-
-
arrowpanel
-
dimmed
)
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
[
selected
]
.
urlbarView
.
megabar
.
urlbarView
-
row
:
not
(
[
type
=
tip
]
)
[
selected
]
>
.
urlbarView
-
row
-
inner
{
background
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
background
)
;
color
:
var
(
-
-
autocomplete
-
popup
-
highlight
-
color
)
;
fill
-
opacity
:
1
;
}
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
{
min
-
width
:
16px
;
height
:
16px
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
contain
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
{
margin
-
inline
-
end
:
calc
(
urlbarViewIconMarginEnd
)
;
}
.
urlbarView
.
megabar
.
urlbarView
-
type
-
icon
{
position
:
absolute
;
min
-
width
:
12px
;
height
:
12px
;
margin
-
bottom
:
-
4px
;
margin
-
inline
-
start
:
8px
;
-
moz
-
context
-
properties
:
fill
stroke
;
}
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
favicon
{
min
-
width
:
24px
;
height
:
24px
;
margin
-
inline
-
end
:
12px
;
}
.
urlbarView
:
not
(
.
megabar
)
.
urlbarView
-
row
[
type
=
tip
]
>
.
urlbarView
-
row
-
inner
>
.
urlbarView
-
favicon
{
margin
-
inline
-
start
:
calc
(
12px
+
urlbarViewIconMarginEnd
)
;
}
/
*
The
help
icon
is
a
standard
Photon
ghost
button
.
*
/
.
urlbarView
-
tip
-
help
{
min
-
width
:
16px
;
height
:
32px
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
help
.
svg
"
)
;
background
-
size
:
16px
;
background
-
position
:
center
;
background
-
repeat
:
no
-
repeat
;
padding
-
inline
:
8px
;
margin
-
inline
-
start
:
8px
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
}
.
urlbarView
-
tip
-
help
[
selected
]
{
box
-
shadow
:
0
0
0
1px
#
0a84ff
inset
0
0
0
1px
#
0a84ff
0
0
0
4px
rgba
(
10
132
255
0
.
3
)
;
}
.
urlbarView
-
tip
-
help
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
.
urlbarView
-
tip
-
help
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
active
)
;
}
#
urlbar
-
contextual
-
tip
-
icon
{
min
-
width
:
24px
;
height
:
24px
;
margin
-
inline
-
end
:
calc
(
urlbarViewIconMarginEnd
)
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
contain
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
urlbarView
-
type
-
icon
.
urlbarView
-
favicon
#
urlbar
-
contextual
-
tip
-
icon
{
transform
:
translateY
(
-
1
.
5px
)
;
}
}
/* ... */

