Bug 1586284 - Modify the flex layout to give urls more space on small screens. r=dao
Let the url wrap, when the screen size is smaller than a threshold.
Along with a new proposal by Verdi for the toolbar overflow behavior, this
allows the urlbar to stay usable in small windows.

Because the title in Quantum Bar should never be empty, a few rules can be
simplified, so they also apply to the url when it's not a sibling of the other
result parts.

Differential Revision: https://phabricator.services.mozilla.com/D53178

UltraBlame original commit: b70e9a9a448663b4f39abf0b222e99a6ba053bf4

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -1263,6 +1263,12 @@ urlbarView
 row
 -
 inner
+.
+urlbarView
+-
+no
+-
+wrap
 {
 display
 :
@@ -1286,6 +1292,456 @@ content
 :
 start
 ;
+}
+.
+urlbarView
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+:
+not
+(
+[
+type
+=
+tab
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+[
+type
+=
+remotetab
+]
+[
+selected
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+[
+type
+=
+remotetab
+]
+:
+hover
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+{
+/
+*
+We
+prioritize
+icons
++
+title
++
+action
+over
+the
+url
+so
+they
+can
+grow
+freely
+but
+the
+url
+should
+never
+disappear
+when
+it
+'
+s
+visible
+*
+/
+flex
+-
+shrink
+:
+0
+;
+max
+-
+width
+:
+calc
+(
+70
+%
+-
+2
+*
+(
+16px
++
+(
+6px
++
+2px
+)
+)
+)
+;
+}
+/
+*
+Wrap
+the
+url
+to
+a
+second
+line
+when
+the
+window
+is
+small
+*
+/
+media
+screen
+and
+(
+max
+-
+width
+:
+800px
+)
+and
+(
+min
+-
+height
+:
+600px
+)
+{
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+-
+inner
+{
+flex
+-
+wrap
+:
+wrap
+;
+}
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+no
+-
+wrap
+{
+max
+-
+width
+:
+100
+%
+!
+important
+;
+flex
+-
+basis
+:
+100
+%
+;
+}
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+url
+{
+margin
+-
+top
+:
+2px
+;
+padding
+-
+inline
+-
+start
+:
+calc
+(
+urlbarViewItemInlinePadding
++
+identityBoxMarginInlineEnd
++
+/
+*
+favicon
+*
+/
+16px
+)
+;
+}
+/
+*
+Note
+:
+switchtab
+entries
+show
+the
+url
+only
+in
+override
+mode
+remotetab
+only
+when
+selected
+or
+:
+hover
+*
+/
+.
+urlbarView
+.
+megabar
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+title
+-
+separator
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+:
+not
+(
+[
+type
+=
+tab
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+title
+-
+separator
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+:
+not
+(
+[
+selected
+]
+)
+:
+not
+(
+:
+hover
+)
+{
+display
+:
+none
+;
+}
 }
 .
 urlbarView
@@ -2088,6 +2544,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2151,6 +2614,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2267,6 +2737,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2331,6 +2808,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2372,6 +2856,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2425,6 +2916,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2469,6 +2967,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2497,6 +3002,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2920,54 +3432,6 @@ space
 :
 nowrap
 ;
-/
-*
-We
-prioritize
-the
-title
-over
-the
-url
-so
-it
-can
-grow
-freely
-but
-it
-should
-never
-crop
-the
-url
-completely
-*
-/
-flex
--
-shrink
-:
-0
-;
-max
--
-width
-:
-calc
-(
-70
-%
--
-2
-*
-(
-16px
-+
-urlbarViewIconMarginEnd
-)
-)
-;
 }
 .
 urlbarView
@@ -3072,6 +3536,10 @@ tags
 .
 urlbarView
 -
+url
+.
+urlbarView
+-
 title
 :
 not
@@ -3083,7 +3551,7 @@ empty
 .
 urlbarView
 -
-secondary
+action
 {
 font
 -
@@ -3171,7 +3639,7 @@ empty
 .
 urlbarView
 -
-secondary
+action
 {
 color
 :
@@ -3198,23 +3666,6 @@ overflow
 :
 hidden
 ;
-}
-.
-urlbarView
--
-title
-:
-not
-(
-:
-empty
-)
-~
-.
-urlbarView
--
-url
-{
 color
 :
 var
@@ -3245,6 +3696,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -3273,22 +3731,18 @@ inner
 .
 urlbarView
 -
-secondary
-{
-color
-:
-inherit
-;
-}
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
 .
 urlbarView
 -
 row
-[
-type
-=
-remotetab
-]
 [
 selected
 ]
@@ -3303,30 +3757,13 @@ inner
 .
 urlbarView
 -
-action
-.
-urlbarView
--
-row
-[
-type
-=
-remotetab
-]
+url
+{
+color
 :
-hover
->
-.
-urlbarView
--
-row
--
-inner
->
-.
-urlbarView
--
-action
+inherit
+;
+}
 .
 urlbarView
 -
@@ -3405,58 +3842,9 @@ inner
 .
 urlbarView
 -
-title
-:
-not
-(
-:
-empty
-)
-~
-.
-urlbarView
+no
 -
-action
-.
-urlbarView
--
-row
-[
-type
-=
-search
-]
-:
-not
-(
-[
-selected
-]
-)
-:
-not
-(
-:
-hover
-)
-:
-not
-(
-[
-show
--
-action
--
-text
-]
-)
->
-.
-urlbarView
--
-row
--
-inner
+wrap
 >
 .
 urlbarView
@@ -3464,32 +3852,6 @@ urlbarView
 title
 -
 separator
-.
-urlbarView
-[
-actionoverride
-]
-.
-urlbarView
--
-row
-[
-type
-=
-switchtab
-]
->
-.
-urlbarView
--
-row
--
-inner
->
-.
-urlbarView
--
-action
 .
 urlbarView
 :
@@ -3560,6 +3922,158 @@ hidden
 visibility
 :
 collapse
+;
+}
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+[
+selected
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+:
+hover
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+-
+row
+[
+type
+=
+search
+]
+:
+not
+(
+[
+selected
+]
+)
+:
+not
+(
+:
+hover
+)
+:
+not
+(
+[
+show
+-
+action
+-
+text
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+type
+=
+switchtab
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+{
+display
+:
+none
 ;
 }
 .
@@ -3640,6 +4154,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
